--- a/src/index.html
+++ b/src/index.html
@@ -10,40 +10,40 @@
 </head>
 <body>
 
-<div>
-    <header class="header-page">
+<div class="main-grid">
+    <header class="header-page row-menu">
 
         <nav class="main-nav">
             <div class="titre-menu">Menu</div>
-            <ul class="liste-menu">
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
-                <li><a href="#">Page 4</a></li>
-            </ul>
+<!--            <ul class="liste-menu">-->
+<!--                <li><a href="#">Page 1</a></li>-->
+<!--                <li><a href="#">Page 2</a></li>-->
+<!--                <li><a href="#">Page 3</a></li>-->
+<!--                <li><a href="#">Page 4</a></li>-->
+<!--            </ul>-->
         </nav>
     </header>
 
-    <section class="intro">
+    <section class="intro col-1-left">
         <img class="logo" src="images/icon-hamburger.svg" alt="Logo hamburger">
         <h1><span>Ham</span>burger</h1>
     </section>
 
-    <section class="message">
+    <section class="message col-2-right">
         <h2>« Un cheeseburger est plus qu'un simple sandwich, c'est un souhait exaucé. »</h2>
 
     </section>
 
-    <section class="image">
+    <section class="image col-2-left">
         <img src="images/hamburger1.jpg" alt="">
     </section>
 
-    <section class="description">
+    <section class="description col-1-right">
         <h3>Et vlan!</h3>
         <p>La dernière fois que vous avez mangé un cheeseburger, c'était il y a trop longtemps. Essayez de ne pas baver quand vous pensez à la viande légèrement carbonisée, mi-saignante nichée entre une brioche molle, bercée dans une laitue iceberg croquante et des condiments amplificateurs de saveur. Pourquoi lisez-vous toujours ceci - allez chercher un cheeseburger.</p>
     </section>
 
-    <section class="image">
+    <section class="image col-2-right">
         <img src="images/hamburger2.jpg" alt="">
     </section>
 
